--- a/index.html
+++ b/index.html
@@ -18,33 +18,44 @@
 
 <body>
 
-    <div class="container-fluid">
-        <div class="row padre">
-            <h1>Visita Nuestras Redes Sociales</h1>
-            <div class="row">
+    <div class="container">
+        <h1>Visita Nuestras Redes Sociales</h1>
+        <div class="row">
 
-                <div class="sociales  text-center">
+            <div class="sociales text-center ">
+                <a href="https://www.instagram.com/protege_sistemas/" target="_blank">
                     <h3>Instagram</h3>
-                </div>
-                <div class="sociales  text-center">
+                    <img src="img/instagram.png" alt="">
+                </a>
+
+            </div>
+
+            <div class="sociales text-center">
+                <a href="https://www.instagram.com/protege_sistemas/" target="_blank">
                     <h3>Facebook</h3>
+                    <img src="img/facebook.png" alt="">
 
-                </div>
-                <div class="sociales   text-center">
+
+            </div>
+
+            <div class="sociales text-center">
+                <a href="https://www.instagram.com/protege_sistemas/" target="_blank">
                     <h3>Whatsapps Corporativos</h3>
-                    <div class="">
+                    <img src="img/wasap.png" alt="">
+                </a>
+            </div>
 
-                    </div>
-
-                </div>
-                <div class="sociales   text-center">
+            <div class="sociales text-center ">
+                <a href="https://www.instagram.com/protege_sistemas/" target="_blank">
                     <h3>Pagina Web</h3>
-
-                </div>
+                    <img src="img/web.png" alt="">
+                </a>
 
             </div>
 
         </div>
+
+    </div>
     </div>
 
 
