--- a/index.html
+++ b/index.html
@@ -5,66 +5,116 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href='img/logoProtege.png'>
-    <title>Protege</title>
-
-    <!-- Css FR -->
+    <title>Redes Sociales Protege</title>
     <link rel="stylesheet" href="index.css">
-    <!-- Boostrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-
-
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@100&display=swap">
 </head>
+<script>
+    console.warn("shite im stuck at darkmode");
+</script>
 
 <body>
-
     <div class="container">
-        <h1>Visita Nuestras Redes Sociales</h1>
-        <div class="row">
-
-            <div class="sociales text-center ">
-                <a href="https://www.instagram.com/protege_sistemas/" target="_blank">
-                    <h3>Instagram</h3>
-                    <img src="img/instagram.png" alt="">
-                </a>
-                <a target="_blank" href="https://es.vexels.com/merch/designs/facebook/">
-                    es.vexels.com
-                    </a>
-
-            </div>
-
-            <div class="sociales text-center">
-                <a href="https://www.instagram.com/protege_sistemas/" target="_blank">
-                    <h3>Facebook</h3>
-                    <img src="img/facebook.png" alt="">
-
-
-            </div>
-
-            <div class="sociales text-center">
-                <a href="https://www.instagram.com/protege_sistemas/" target="_blank">
-                    <h3>Whatsapps Corporativos</h3>
-                    <img src="img/wasap.png" alt="">
-                </a>
-            </div>
-
-            <div class="sociales text-center ">
-                <a href="https://www.instagram.com/protege_sistemas/" target="_blank">
-                    <h3>Pagina Web</h3>
-                    <img src="img/web.png" alt="">
-                </a>
-
-            </div>
-
+        <div class="title">
+            <h1>Protege LTDA</h1>
         </div>
 
+        <div class="link">
+            <div class="a">
+                <a href="https://www.instagram.com/itssmejoan/">
+                    <div class="kotak">
+                        <div class="img">
+                            <img src="asset/instagram (1).png">
+                        </div>
+                        <div class="tautan">
+                            <p class="ig">Instagram</p>
+                        </div>
+                    </div>
+                </a>
+            </div>
+
+            <div class="a">
+                <a href="https://github.com/joanpoerba">
+                    <div class="kotak">
+                        <div class="img">
+                            <img src="asset/github.png">
+                        </div>
+                        <div class="tautan">
+                            <p>Github</p>
+                        </div>
+                    </div>
+                </a>
+            </div>
+
+            <div class="a">
+                <a href="https://www.linkedin.com/in/joanpurba-hehehehehe/">
+                    <div class="kotak">
+                        <div class="img">
+                            <img src="asset/linkedin.png">
+                        </div>
+                        <div class="tautan">
+                            <p class="sama">LinkedIn</p>
+                        </div>
+                    </div>
+                </a>
+            </div>
+
+            <div class="a">
+                <a href="https://web.telegram.org/k/">
+                    <div class="kotak">
+                        <div class="img">
+                            <img src="asset/telegram.png">
+                        </div>
+                        <div class="tautan">
+                            <p class="sama">Telegram</p>
+                        </div>
+                    </div>
+                </a>
+            </div>
+
+            <div class="a">
+                <a href="https://api.whatsapp.com/send/?phone=6282275338090&text&app_absent=0">
+                    <div class="kotak">
+                        <div class="img">
+                            <img src="asset/whatsapp (1).png">
+                        </div>
+                        <div class="tautan">
+                            <p class="wa">WhatsApp</p>
+                        </div>
+                    </div>
+                </a>
+            </div>
+
+            <div class="a">
+                <a href="https://www.youtube.com/channel/UCu_BBhdQLScAKUHRLaLWg0Q">
+                    <div class="kotak">
+                        <div class="img">
+                            <img class="ytb-logo" src="asset/youtube-featured-removebg-preview.png">
+                        </div>
+                        <div class="tautan">
+                            <p class="ytb">YouTube</p>
+                        </div>
+                    </div>
+                </a>
+            </div>
+
+            <div class="a">
+                <a href="https://discord.gg/8eV8vqFZ">
+                    <div class="kotak">
+                        <div class="img">
+                            <img class="discord-logo" src="asset/discord-new-20218785-removebg-preview.png">
+                        </div>
+                        <div class="tautan">
+                            <p class="dc">Discord</p>
+                        </div>
+                    </div>
+                </a>
+            </div>
+        </div>
+        <footer>
+            <p>By <b><a href="https://www.linkedin.com/in/ricardo-rojas-186178192">RG Soluciones Tecnologicas</a></b></p>
+        </footer>
     </div>
-    </div>
-
-
-
-    <!-- JavaScript  -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </body>
 
 </html>
