--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Redes Sociales Protege</title>
+
+    <!-- Mi Css -->
     <link rel="stylesheet" href="index.css">
+    <!-- Otros -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@100&display=swap">
 </head>
 <script>
@@ -16,12 +19,13 @@
 <body>
     <div class="container">
         <div class="title">
+            <img src="img/logoProtege.png" alt="">
             <h1>Protege LTDA</h1>
         </div>
 
         <div class="link">
             <div class="a">
-                <a href="https://www.instagram.com/itssmejoan/">
+                <a href="https://www.instagram.com/protegeltda.cl/">
                     <div class="kotak">
                         <div class="img">
                             <img src="asset/instagram (1).png">
@@ -34,7 +38,7 @@
             </div>
 
             <div class="a">
-                <a href="https://github.com/joanpoerba">
+                <a href="https://github.com/">
                     <div class="kotak">
                         <div class="img">
                             <img src="asset/github.png">
@@ -47,13 +51,13 @@
             </div>
 
             <div class="a">
-                <a href="https://www.linkedin.com/in/joanpurba-hehehehehe/">
+                <a href="https://www.facebook.com/protege.ltda.1/">
                     <div class="kotak">
                         <div class="img">
-                            <img src="asset/linkedin.png">
+                            <img src="img/facebook-logo.svg">
                         </div>
                         <div class="tautan">
-                            <p class="sama">LinkedIn</p>
+                            <p class="sama">Facebook</p>
                         </div>
                     </div>
                 </a>
