--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
     <div class="container">
         <div class="title">
             <img src="img/logoProtege.png" alt="">
+
             <h1>Protege LTDA</h1>
+            <h3>Visita Nuestras Redes</h3>
         </div>
 
         <div class="link">
@@ -32,19 +34,6 @@
                         </div>
                         <div class="tautan">
                             <p class="ig">Instagram</p>
-                        </div>
-                    </div>
-                </a>
-            </div>
-
-            <div class="a">
-                <a href="https://github.com/">
-                    <div class="kotak">
-                        <div class="img">
-                            <img src="asset/github.png">
-                        </div>
-                        <div class="tautan">
-                            <p>Github</p>
                         </div>
                     </div>
                 </a>
@@ -63,18 +52,7 @@
                 </a>
             </div>
 
-            <div class="a">
-                <a href="https://web.telegram.org/k/">
-                    <div class="kotak">
-                        <div class="img">
-                            <img src="asset/telegram.png">
-                        </div>
-                        <div class="tautan">
-                            <p class="sama">Telegram</p>
-                        </div>
-                    </div>
-                </a>
-            </div>
+
 
             <div class="a">
                 <a href="https://api.whatsapp.com/send/?phone=6282275338090&text&app_absent=0">
@@ -90,30 +68,18 @@
             </div>
 
             <div class="a">
-                <a href="https://www.youtube.com/channel/UCu_BBhdQLScAKUHRLaLWg0Q">
+                <a href="https://web.telegram.org/k/">
                     <div class="kotak">
                         <div class="img">
-                            <img class="ytb-logo" src="asset/youtube-featured-removebg-preview.png">
+                            <img src="asset/telegram.png">
                         </div>
                         <div class="tautan">
-                            <p class="ytb">YouTube</p>
+                            <p class="sama">Nuestra Web </p>
                         </div>
                     </div>
                 </a>
             </div>
 
-            <div class="a">
-                <a href="https://discord.gg/8eV8vqFZ">
-                    <div class="kotak">
-                        <div class="img">
-                            <img class="discord-logo" src="asset/discord-new-20218785-removebg-preview.png">
-                        </div>
-                        <div class="tautan">
-                            <p class="dc">Discord</p>
-                        </div>
-                    </div>
-                </a>
-            </div>
         </div>
         <footer>
             <p>By <b><a href="https://www.linkedin.com/in/ricardo-rojas-186178192">RG Soluciones Tecnologicas</a></b></p>
