--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
             </div>
 
             <div class="a">
-                <a href="https://web.telegram.org/k/">
+                <a href="https://protegeltda.cl/">
                     <div class="kotak">
                         <div class="img">
-                            <img src="asset/telegram.png">
+                            <img src="web.png">
                         </div>
                         <div class="tautan">
                             <p class="sama">Nuestra Web </p>
@@ -77,7 +77,6 @@
                     </div>
                 </a>
             </div>
-
         </div>
         <footer>
             <p>By <b><a href="https://www.linkedin.com/in/ricardo-rojas-186178192">RG Soluciones Tecnologicas</a></b></p>
