--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 <a href="https://protegeltda.cl/">
                     <div class="kotak">
                         <div class="img">
-                            <img src="web.png">
+                            <img src="img/web.png">
                         </div>
                         <div class="tautan">
                             <p class="sama">Nuestra Web </p>
