--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 <body>
     <div class="container">
         <div class="title">
-            <img src="img/logoProtege.png" alt="">
-
+            <div><img src="img/logoProtege-removebg-preview.png" alt="PROTEGE">
+            </div>
             <h1>Protege LTDA</h1>
             <h3>Visita Nuestras Redes</h3>
         </div>
@@ -30,7 +30,7 @@
                 <a href="https://www.instagram.com/protegeltda.cl/">
                     <div class="kotak">
                         <div class="img">
-                            <img src="asset/instagram (1).png">
+                            <img src="img/instagram-icon.svg">
                         </div>
                         <div class="tautan">
                             <p class="ig">Instagram</p>
@@ -56,7 +56,7 @@
                 <a href="https://api.whatsapp.com/send/?phone=56933718685&text&app_absent=0">
                     <div class="kotak">
                         <div class="img">
-                            <img src="asset/whatsapp (1).png">
+                            <img src="img/wasap.png">
                         </div>
                         <div class="tautan">
                             <p class="wa">WhatsApp</p>
