--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 <body>
     <div class="container">
         <div class="title">
-            <div><img src="img/logoProtege-removebg-preview.png" alt="PROTEGE">
-            </div>
+            <img src="img/logoProtege-removebg-preview.png" alt="PROTEGE">
+
             <h1>Protege LTDA</h1>
             <h3>Visita Nuestras Redes</h3>
         </div>
@@ -84,4 +84,4 @@
     </div>
 </body>
 
-</html>
+</html
