--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
         <div class="link">
             <div class="a">
-                <a href="https://www.instagram.com/protegeltda.cl/">
+                <a href="https://www.instagram.com/protegeltda.cl/" target="_blank">
                     <div class="kotak">
                         <div class="img">
                             <img src="img/instagram-icon.svg">
@@ -56,7 +56,7 @@
                 <a href="https://api.whatsapp.com/send/?phone=56933718685&text&app_absent=0">
                     <div class="kotak">
                         <div class="img">
-                            <img src="img/wasap.png">
+                            <img class="imgwa" src="img/wasap.png">
                         </div>
                         <div class="tautan">
                             <p class="wa">WhatsApp</p>
