--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <!-- Mi Css -->
     <link rel="stylesheet" href="index.css">
     <!-- Otros -->
+
+    <link rel="icon" href="img/logoProtege-removebg-preview.png">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@100&display=swap">
 </head>
 <script>
@@ -30,7 +32,7 @@
                 <a href="https://www.instagram.com/protegeltda.cl/" target="_blank">
                     <div class="kotak">
                         <div class="img">
-                            <img src="img/instagram-icon.svg">
+                            <img src="img/instagram.png">
                         </div>
                         <div class="tautan">
                             <p class="ig">Instagram</p>
@@ -43,7 +45,7 @@
                 <a href="https://www.facebook.com/protege.ltda.1/">
                     <div class="kotak">
                         <div class="img">
-                            <img src="img/facebook-logo.svg">
+                            <img src="img/facebook.png">
                         </div>
                         <div class="tautan">
                             <p class="sama">Facebook</p>
@@ -56,7 +58,7 @@
                 <a href="https://api.whatsapp.com/send/?phone=56933718685&text&app_absent=0">
                     <div class="kotak">
                         <div class="img">
-                            <img class="imgwa" src="img/wasap.png">
+                            <img class="imgwa" src="img/whatsapp.png">
                         </div>
                         <div class="tautan">
                             <p class="wa">WhatsApp</p>
@@ -69,10 +71,10 @@
                 <a href="https://protegeltda.cl/">
                     <div class="kotak">
                         <div class="img">
-                            <img src="img/web.png">
+                            <img src="img/dropbox.png">
                         </div>
                         <div class="tautan">
-                            <p class="sama">Nuestra Web </p>
+                            <p class="sama">Nuestro Catalogo </p>
                         </div>
                     </div>
                 </a>
